--- a/package.json
+++ b/package.json
@@ -25,12 +25,19 @@
     "@babel/core": "^7.14.3",
     "@babel/node": "^7.14.2",
     "@babel/preset-env": "^7.14.2",
+    "@vue/compiler-sfc": "^3.0.11",
+    "add": "^2.0.6",
+    "postcss": "^8.3.0",
     "rollup": "^2.50.2",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-terser": "^7.0.2",
-    "sam-test-data": "^0.0.5"
+    "rollup-plugin-vue": "^6.0.0",
+    "sam-test-data": "^0.0.5",
+    "sass": "^1.34.0",
+    "yarn": "^1.22.10"
   }
 }
