--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": [["@babel/env"]]
+  "presets": ["@babel/preset-react", "@babel/env"],
+  "plugins": ["@babel/plugin-transform-react-jsx"]
 }
