--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@babel/core": "^7.14.3",
     "@babel/node": "^7.14.2",
     "@babel/preset-env": "^7.14.2",
+    "@babel/preset-react": "^7.13.13",
     "@vue/compiler-sfc": "^3.0.11",
     "add": "^2.0.6",
+    "less": "^4.1.1",
     "postcss": "^8.3.0",
     "rollup": "^2.50.2",
     "rollup-plugin-babel": "^4.4.0",
