--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev": "rollup -wc rollup.config.dev.js",
     "build": "rollup -c rollup.config.dev.js",
     "build:prod": "rollup -c rollup.config.prod.js",
+    "build:react": "rollup -c rollup.config.react.js",
+    "build:vue": "rollup -c rollup.config.vue.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,7 +29,6 @@
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
     "@vue/compiler-sfc": "^3.0.11",
-    "add": "^2.0.6",
     "less": "^4.1.1",
     "postcss": "^8.3.0",
     "rollup": "^2.50.2",
