--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-vue": "^6.0.0",
     "sam-test-data": "^0.0.5",
-    "sass": "^1.34.0",
-    "yarn": "^1.22.10"
+    "sass": "^1.34.0"
   }
 }
